--- a/termo/termo.cabal
+++ b/termo/termo.cabal
@@ -64,10 +64,12 @@ executable termo
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.2.1
+    build-depends:    base ^>=4.17.2.1,
+                      ansi-terminal ^>=0.11.3
 
     -- Directories containing source files.
     hs-source-dirs:   app
 
     -- Base language which the package is written in.
     default-language: Haskell2010
+    other-modules:    Game, Attempt, Menu, Words
