--- a/termo/termo.cabal
+++ b/termo/termo.cabal
@@ -65,7 +65,8 @@ executable termo
 
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.17.2.1,
-                      ansi-terminal ^>=0.11.3
+                      ansi-terminal ^>=0.11.3,
+                      random ^>= 1.2
 
     -- Directories containing source files.
     hs-source-dirs:   app
