chore: remove dependency

--- a/termo/termo.cabal
+++ b/termo/termo.cabal
@@ -66,8 +66,7 @@ executable termo
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.17.2.1,
                       ansi-terminal ^>=0.11.3,
-                      random ^>= 1.2,
-                      containers
+                      random ^>= 1.2
 
     -- Directories containing source files.
     hs-source-dirs:   app
