--- a/termo/termo.cabal
+++ b/termo/termo.cabal
@@ -73,4 +73,4 @@ executable termo
 
     -- Base language which the package is written in.
     default-language: Haskell2010
-    other-modules:    Game, Attempt, Menu, Words
+    other-modules:    Game, Attempt, Menu, Words, Colors, LetterStatus
